@@ -59,6 +59,7 @@ switch ($page->page) {
 	case 'sitemap':
 	case 'sysinfo':
 	case 'terms-and-conditions':
+	case 'topic_delete':
 	case 'upcoming':
 	case 'xxx':
 	case 'xxxmodal':
